--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://niceguyjohn.gov">John Forrest</a>.
+      >. Coded by
+      <a href="https://niceguyjohn.org" target="_blank" rel="noopener"
+        >John Forrest</a
+      >.
     </div>
   </body>
 </html>
